objects/SpotDataMirror__c.object
<CustomObject>
    <fields>
        <fullName>Air_Date_Time__c</fullName>
        <formula>TEXT(Air_Date__c ) &amp;&quot; - &quot;&amp; Air_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Air Date/Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Air_Date_YYYY__c</fullName>
        <formula>text( Air_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Air Date YYYYMMDD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Air_Date__c</fullName>
        <label>Air Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Air_Time_Hour__c</fullName>
        <formula>VALUE(SUBSTITUTE(LEFT( Air_Time__c , 2 ) , &quot;:&quot;,&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Air Time Hour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Air_Time__c</fullName>
        <label>Air Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Break_Code__c</fullName>
        <label>[Dep]Break Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CM</fullName>
                </value>
                <value>
                    <fullName>LOC</fullName>
                </value>
                <value>
                    <fullName>PRO</fullName>
                </value>
                <value>
                    <fullName>CMN</fullName>
                </value>
                <value>
                    <fullName>CML</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>[Dep]Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commercial_Title__c</fullName>
        <label>Commercial Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Type__c</fullName>
        <label>Commercial Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit__c</fullName>
        <label>[Dep]Credit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ErrorReason__c</fullName>
        <label>[Dep]Error Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unit Length not found</fullName>
                </value>
                <value>
                    <fullName>Air Date does not match</fullName>
                </value>
                <value>
                    <fullName>Air Time does not match</fullName>
                </value>
                <value>
                    <fullName>Rate not found</fullName>
                </value>
                <value>
                    <fullName>Network Deal number not found</fullName>
                </value>
                <value>
                    <fullName>No Network Deal number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <label>[Dep]Error</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deal entry error</fullName>
                </value>
                <value>
                    <fullName>Ran out of time rotation</fullName>
                </value>
                <value>
                    <fullName>Overran units</fullName>
                </value>
                <value>
                    <fullName>Wrong rate</fullName>
                </value>
                <value>
                    <fullName>Wrong Traffic</fullName>
                </value>
                <value>
                    <fullName>Network - Ran Out of Rotation</fullName>
                </value>
                <value>
                    <fullName>Network - Deal Entry Error</fullName>
                </value>
                <value>
                    <fullName>Network - Overran Units</fullName>
                </value>
                <value>
                    <fullName>Network - Wrong Rate</fullName>
                </value>
                <value>
                    <fullName>Network - Wrong Traffic</fullName>
                </value>
                <value>
                    <fullName>Network - Min Separation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>House_Number__c</fullName>
        <label>[Dep]House Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISCI__c</fullName>
        <label>ISCI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <label>Length</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>75</fullName>
                </value>
                <value>
                    <fullName>180</fullName>
                </value>
                <value>
                    <fullName>300</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <label>Line Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Type__c</fullName>
        <label>[Dep]Line Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>[Dep]Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Spot Data</relationshipLabel>
        <relationshipName>SpotDataMirror</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Network_Deal_Number__c</fullName>
        <label>Network Deal Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network__c</fullName>
        <label>Network</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plot_End__c</fullName>
        <label>Plot End</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plot_Start__c</fullName>
        <label>Plot Start</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Problem__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if a corresponding Spot Data record failed to be created during the Post Log upload (CHECKED = Spot Data record was  NOT created)</description>
        <inlineHelpText>Spot Data record was  NOT created</inlineHelpText>
        <label>[Dep]Need To Reprocess</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProcessRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>[Dep]Process Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_ID__c</fullName>
        <label>Program ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Raycom_Invoice_Number__c</fullName>
        <description>Raycom Invoice Number, Order number + Month/Version</description>
        <label>[Dep]Raycom Invoice Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScheduleWeek__c</fullName>
        <formula>Schedule__r.Week__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Schedule Week</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Schedule</label>
        <referenceTo>Schedules__c</referenceTo>
        <relationshipLabel>Spot Data</relationshipLabel>
        <relationshipName>SpotDataMirror</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ScribeId__c</fullName>
        <label>ScribeId</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Spot_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is used to link the related spot date record Created/Updated</description>
        <label>Spot Data</label>
        <referenceTo>Spot_Data__c</referenceTo>
        <relationshipLabel>Spot Data Mirrors</relationshipLabel>
        <relationshipName>Spot_Data_Mirrors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Spot_Equiv_30__c</fullName>
        <formula>VALUE(TEXT(Length__c)) / 30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Spot Equiv :30</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Spot_Rate__c</fullName>
        <label>Spot Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Spot_Status__c</fullName>
        <label>[Dep]Spot Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spot_Type__c</fullName>
        <label>[Dep]Spot Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aired</fullName>
                    <default>true</default>
                    <label>Aired</label>
                </value>
                <value>
                    <fullName>Discrepancy</fullName>
                </value>
                <value>
                    <fullName>Credited</fullName>
                </value>
                <value>
                    <fullName>Discrepancy - Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Period__c</fullName>
        <description>Time Period field for Bounce</description>
        <label>Time Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Week__c</fullName>
        <formula>CASE( 
MOD(  Air_Date__c  - DATE(1900, 1, 7), 7), 
0, Air_Date__c - 6, 
1, Air_Date__c , 
2, Air_Date__c  -1, 
3, Air_Date__c - 2, 
4,Air_Date__c  - 3, 
5, Air_Date__c - 4, 
6, Air_Date__c  - 5, DATE(2001, 1, 1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X800__c</fullName>
        <label>800 #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Spot Data Mirror</label>
    <listViews>
        <fullName>Antenna</fullName>
        <columns>Problem__c</columns>
        <columns>Schedule__c</columns>
        <columns>Spot_Data__c</columns>
        <columns>Network__c</columns>
        <columns>NAME</columns>
        <columns>Air_Date_Time__c</columns>
        <columns>Length__c</columns>
        <columns>Spot_Rate__c</columns>
        <columns>Network_Deal_Number__c</columns>
        <columns>ISCI__c</columns>
        <columns>Commercial_Title__c</columns>
        <columns>X800__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Air_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>4/30/2018</value>
        </filters>
        <filters>
            <field>Network__c</field>
            <operation>contains</operation>
            <value>AntennaTV</value>
        </filters>
        <filters>
            <field>Network__c</field>
            <operation>notContain</operation>
            <value>Litton</value>
        </filters>
        <label>ThisTV</label>
    </listViews>
    <listViews>
        <fullName>Antenna1</fullName>
        <columns>Problem__c</columns>
        <columns>Schedule__c</columns>
        <columns>Spot_Data__c</columns>
        <columns>Network__c</columns>
        <columns>NAME</columns>
        <columns>Air_Date_Time__c</columns>
        <columns>Length__c</columns>
        <columns>Spot_Rate__c</columns>
        <columns>Network_Deal_Number__c</columns>
        <columns>ISCI__c</columns>
        <columns>Commercial_Title__c</columns>
        <columns>X800__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Week__c</field>
            <operation>equals</operation>
            <value>5/21/2018</value>
        </filters>
        <filters>
            <field>Network__c</field>
            <operation>contains</operation>
            <value>ThisTV,ThisTV-Local</value>
        </filters>
        <label>ThisTV</label>
    </listViews>
    <listViews>
        <fullName>AntennaTV</fullName>
        <columns>Problem__c</columns>
        <columns>Schedule__c</columns>
        <columns>Spot_Data__c</columns>
        <columns>Network__c</columns>
        <columns>NAME</columns>
        <columns>Air_Date_Time__c</columns>
        <columns>Length__c</columns>
        <columns>Spot_Rate__c</columns>
        <columns>Network_Deal_Number__c</columns>
        <columns>ISCI__c</columns>
        <columns>Commercial_Title__c</columns>
        <columns>X800__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Network__c</field>
            <operation>contains</operation>
            <value>AntennaTV</value>
        </filters>
        <filters>
            <field>Network__c</field>
            <operation>notContain</operation>
            <value>Litton</value>
        </filters>
        <filters>
            <field>Air_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>5/21/2018</value>
        </filters>
        <label>AntennaTV</label>
    </listViews>
    <listViews>
        <fullName>Bounce_TV</fullName>
        <columns>Problem__c</columns>
        <columns>Schedule__c</columns>
        <columns>Spot_Data__c</columns>
        <columns>Network__c</columns>
        <columns>NAME</columns>
        <columns>Air_Date_Time__c</columns>
        <columns>Length__c</columns>
        <columns>Spot_Rate__c</columns>
        <columns>Network_Deal_Number__c</columns>
        <columns>ISCI__c</columns>
        <columns>Commercial_Title__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Air_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>12/3/2018</value>
        </filters>
        <filters>
            <field>Network__c</field>
            <operation>contains</operation>
            <value>Bounce,bb</value>
        </filters>
        <label>Bounce</label>
    </listViews>
    <listViews>
        <fullName>CBS_Sports</fullName>
        <columns>Network__c</columns>
        <columns>Spot_Data__c</columns>
        <columns>Schedule__c</columns>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Network_Deal_Number__c</columns>
        <columns>Error__c</columns>
        <columns>Air_Date_Time__c</columns>
        <columns>Length__c</columns>
        <columns>Spot_Rate__c</columns>
        <columns>Commercial_Title__c</columns>
        <columns>ISCI__c</columns>
        <columns>Program_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Network__c</field>
            <operation>contains</operation>
            <value>CBS Sports,CBS Sports Local</value>
        </filters>
        <filters>
            <field>Week__c</field>
            <operation>equals</operation>
            <value>5/21/2018</value>
        </filters>
        <label>CBS Sports</label>
    </listViews>
    <listViews>
        <fullName>EscapeTV</fullName>
        <columns>Schedule__c</columns>
        <columns>Spot_Data__c</columns>
        <columns>Network__c</columns>
        <columns>NAME</columns>
        <columns>Air_Date_Time__c</columns>
        <columns>Time_Period__c</columns>
        <columns>Length__c</columns>
        <columns>Spot_Rate__c</columns>
        <columns>Network_Deal_Number__c</columns>
        <columns>ISCI__c</columns>
        <columns>Commercial_Title__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Week__c</field>
            <operation>equals</operation>
            <value>4/30/2018</value>
        </filters>
        <filters>
            <field>Network__c</field>
            <operation>contains</operation>
            <value>escape</value>
        </filters>
        <label>EscapeTV</label>
    </listViews>
    <listViews>
        <fullName>EscapeTV1</fullName>
        <columns>Schedule__c</columns>
        <columns>Spot_Data__c</columns>
        <columns>Network__c</columns>
        <columns>NAME</columns>
        <columns>Air_Date_Time__c</columns>
        <columns>Time_Period__c</columns>
        <columns>Length__c</columns>
        <columns>Spot_Rate__c</columns>
        <columns>Network_Deal_Number__c</columns>
        <columns>ISCI__c</columns>
        <columns>Commercial_Title__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Week__c</field>
            <operation>equals</operation>
            <value>5/21/2018</value>
        </filters>
        <filters>
            <field>Network__c</field>
            <operation>contains</operation>
            <value>escapetv</value>
        </filters>
        <label>EscapeTV</label>
    </listViews>
    <listViews>
        <fullName>GritTV</fullName>
        <columns>Problem__c</columns>
        <columns>Schedule__c</columns>
        <columns>Spot_Data__c</columns>
        <columns>Commercial_Title__c</columns>
        <columns>Product__c</columns>
        <columns>Network__c</columns>
        <columns>Air_Date_Time__c</columns>
        <columns>Time_Period__c</columns>
        <columns>Length__c</columns>
        <columns>Spot_Rate__c</columns>
        <columns>Network_Deal_Number__c</columns>
        <columns>ISCI__c</columns>
        <columns>Commercial_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Network__c</field>
            <operation>equals</operation>
            <value>grittv</value>
        </filters>
        <label>GritTV</label>
    </listViews>
    <listViews>
        <fullName>JW_Test</fullName>
        <columns>NAME</columns>
        <columns>Schedule__c</columns>
        <columns>Spot_Data__c</columns>
        <columns>Network_Deal_Number__c</columns>
        <columns>Spot_Rate__c</columns>
        <columns>Length__c</columns>
        <columns>Air_Date__c</columns>
        <columns>Air_Time__c</columns>
        <columns>Network__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Adrian Pichardo</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>JW Test</label>
    </listViews>
    <listViews>
        <fullName>Justice_Network1</fullName>
        <columns>Problem__c</columns>
        <columns>Schedule__c</columns>
        <columns>Spot_Data__c</columns>
        <columns>Network__c</columns>
        <columns>NAME</columns>
        <columns>Air_Date_Time__c</columns>
        <columns>Length__c</columns>
        <columns>Spot_Rate__c</columns>
        <columns>Network_Deal_Number__c</columns>
        <columns>ISCI__c</columns>
        <columns>Commercial_Title__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Air_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>5/21/2018</value>
        </filters>
        <filters>
            <field>Network__c</field>
            <operation>contains</operation>
            <value>Justice</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Justice Network</label>
    </listViews>
    <listViews>
        <fullName>Laff</fullName>
        <columns>Problem__c</columns>
        <columns>Schedule__c</columns>
        <columns>Spot_Data__c</columns>
        <columns>Network__c</columns>
        <columns>NAME</columns>
        <columns>Air_Date_Time__c</columns>
        <columns>Time_Period__c</columns>
        <columns>Length__c</columns>
        <columns>Spot_Rate__c</columns>
        <columns>Network_Deal_Number__c</columns>
        <columns>ISCI__c</columns>
        <columns>Commercial_Title__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Week__c</field>
            <operation>equals</operation>
            <value>5/21/2018</value>
        </filters>
        <filters>
            <field>Network__c</field>
            <operation>contains</operation>
            <value>laff</value>
        </filters>
        <label>Laff</label>
    </listViews>
    <listViews>
        <fullName>MAV_TV</fullName>
        <columns>Spot_Data__c</columns>
        <columns>Schedule__c</columns>
        <columns>Status__c</columns>
        <columns>Network_Deal_Number__c</columns>
        <columns>Commercial_Title__c</columns>
        <columns>Network__c</columns>
        <columns>Air_Date_Time__c</columns>
        <columns>Length__c</columns>
        <columns>Spot_Rate__c</columns>
        <columns>NAME</columns>
        <columns>ISCI__c</columns>
        <columns>Error__c</columns>
        <columns>Product__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Air_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>5/21/2018</value>
        </filters>
        <filters>
            <field>Network__c</field>
            <operation>equals</operation>
            <value>MAV TV</value>
        </filters>
        <label>MAV TV</label>
    </listViews>
    <listViews>
        <fullName>MGM_HD</fullName>
        <columns>Network__c</columns>
        <columns>Spot_Data__c</columns>
        <columns>Schedule__c</columns>
        <columns>Commercial_Title__c</columns>
        <columns>NAME</columns>
        <columns>Network_Deal_Number__c</columns>
        <columns>Length__c</columns>
        <columns>Status__c</columns>
        <columns>Air_Date_Time__c</columns>
        <columns>Spot_Rate__c</columns>
        <columns>Problem__c</columns>
        <columns>Error__c</columns>
        <columns>Product__c</columns>
        <columns>ISCI__c</columns>
        <columns>Program_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Air_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>5/14/2018</value>
        </filters>
        <filters>
            <field>Network__c</field>
            <operation>equals</operation>
            <value>MGM HD</value>
        </filters>
        <label>MGM HD</label>
    </listViews>
    <listViews>
        <fullName>MLB</fullName>
        <columns>Schedule__c</columns>
        <columns>Spot_Data__c</columns>
        <columns>Length__c</columns>
        <columns>Status__c</columns>
        <columns>Network_Deal_Number__c</columns>
        <columns>NAME</columns>
        <columns>Air_Date_Time__c</columns>
        <columns>Spot_Rate__c</columns>
        <columns>Network__c</columns>
        <columns>Error__c</columns>
        <columns>ISCI__c</columns>
        <columns>Commercial_Title__c</columns>
        <columns>ErrorReason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Air_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>4/16/2018</value>
        </filters>
        <filters>
            <field>Network__c</field>
            <operation>contains</operation>
            <value>mlb</value>
        </filters>
        <label>MLB</label>
    </listViews>
    <listViews>
        <fullName>MLB1</fullName>
        <columns>Problem__c</columns>
        <columns>Schedule__c</columns>
        <columns>Spot_Data__c</columns>
        <columns>Network__c</columns>
        <columns>NAME</columns>
        <columns>Air_Date_Time__c</columns>
        <columns>Length__c</columns>
        <columns>Spot_Rate__c</columns>
        <columns>Network_Deal_Number__c</columns>
        <columns>ISCI__c</columns>
        <columns>Commercial_Title__c</columns>
        <columns>X800__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Air_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>5/21/2018</value>
        </filters>
        <filters>
            <field>Network__c</field>
            <operation>contains</operation>
            <value>MLB</value>
        </filters>
        <label>MLB</label>
    </listViews>
    <nameField>
        <label>Spot Data Mirror Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Spot Data Mirrors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Needs_Air_Time</fullName>
        <active>true</active>
        <description>Spot Data Mirror&apos;s need both Air Dates and Air Times</description>
        <errorConditionFormula>OR(ISBLANK( Air_Date__c),ISBLANK(Air_Time__c ), ISBLANK ( Network_Deal_Number__c ), ISBLANK( Spot_Rate__c ),ISBLANK( Network__c ) )</errorConditionFormula>
        <errorMessage>You are missing one of the necessary fields for Spot Data Mirror: Air Date, Air Time, Network, Network Deal Number or Spot Rate. Double check your upload file.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Schedule_Week_Match</fullName>
        <active>true</active>
        <description>Alerts if user is going to match to a schedule in a different week</description>
        <errorConditionFormula>if( Week__c  &lt;&gt;  ScheduleWeek__c ,True, False)</errorConditionFormula>
        <errorDisplayField>Schedule__c</errorDisplayField>
        <errorMessage>The schedule you have entered matches to a different week than this record.  Please find a schedule in the correct week.</errorMessage>
    </validationRules>
</CustomObject>